<resources>
    <string name="app_name">CertificatePinningDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_hint">Enter github name</string>
    <string name="user_github_acces">user github image</string>
    <string name="search">SEARCH</string>
    <string name="user_label">User:</string>
    <string name="followers_label">Followers:</string>
    <string name="following_label">Following:</string>
    <string name="followers_total_message">%s followers</string>
    <string name="following_total_message">%s following</string>
    <string name="user_not_found_message">user not found</string>

    <string name="error_message">"Something went wrong.\nWe have informed our team about this problem.\nTerribly sorry …"</string>


    <string name="no_internet_title">No internet found</string>
    <string name="no_internet_message">Failed to get … Looks like you don\'t have internet connection</string>

    <string name="unknown_error_title">Something went wrong</string>
    <string name="unknown_error_message">Looks like something went wrong while getting your data. Please try again later</string>
    <string name="no_sslpinning_title">Certificate Not Valid</string>
    <string name="no_sslpinning_message">SSLPeerUnverifiedException Certificate pinning failure</string>


</resources>