<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        style="@style/parent"
        android:paddingLeft="@dimen/normal_padding"
        android:paddingRight="@dimen/normal_padding"
        android:paddingBottom="@dimen/normal_padding">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/llSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/et_profileName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:autofillHints="username"
                        android:background="@drawable/container_search"
                        android:digits="0,1,2,3,4,5,6,7,8,9,*,qwertzuiopasdfghjklyxcvbnm"
                        android:gravity="center_vertical"
                        android:hint="@string/username_hint"
                        android:imeOptions="actionSearch"

                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingHorizontal="@dimen/normal_padding"
                        android:paddingVertical="@dimen/padding"

                        android:singleLine="true"
                        android:textSize="16sp"

                        />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/card_corner_radius">

                    <ImageView
                        android:id="@+id/iv_profile"
                        android:layout_width="234dp"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"

                        android:contentDescription="@string/user_github_acces"
                        android:src="@mipmap/icon_octogithub" />

                    <TextView
                        android:id="@+id/tvUserLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/user_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvGithuUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="User name example" />

                    <TextView
                        android:id="@+id/tvFollowersLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/followers_label"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tvFollowers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="3" />

                    <TextView
                        android:id="@+id/tvFollowinLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/following_label"
                        android:textStyle="bold"
                        tools:text="@string/following_label" />

                    <TextView
                        android:id="@+id/tvFollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        tools:text="@string/following_total_message" />


                </LinearLayout>


                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/btnSearch"
                    app:layout_constraintEnd_toEndOf="@+id/btnSearch"
                    app:layout_constraintStart_toStartOf="@+id/btnSearch">

                    <TextView

                        android:id="@+id/tvError"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:scrollbarStyle="outsideOverlay"
                        android:text="error" />
                </ScrollView>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="Search user"
        android:visibility="visible"

        />
</FrameLayout>